correctly align top navigation

--- a/_less/custom.less
+++ b/_less/custom.less
@@ -28,6 +28,7 @@ html, body {
 
 #top-nav {
   margin-top:15px;
+  float: right;
 }
 
 #dg-suite-hp {
@@ -58,6 +59,7 @@ html, body {
 
 .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
     margin-top: 0;
+    margin-left: 17px;
 }
 
 .navbar .sub-menu:before {
@@ -145,6 +147,13 @@ html, body {
   color: @dropdownLinkColorHover;
   text-decoration: none;
   background-color: @dropdownLinkBackgroundHover;
+}
+
+.navbar-inner {
+  padding-left:  20px;
+  padding-right: 20px;
+  .border-radius(0);
+  .box-shadow(0);
 }
 
 
